cmake_minimum_required(VERSION 2.6)


#add_subdirectory(api)
add_subdirectory(base)

add_subdirectory(p2p)
add_subdirectory(media)
#add_subdirectory(pc)
#add_subdirectory(common_video)

#add_subdirectory(./sound)
#add_subdirectory(./system_wrappers)
#add_subdirectory(./libjingle)
#add_subdirectory(./voice_engine)
#add_subdirectory(./video)
#add_subdirectory(./modules)
