add_subdirectory(video_capture)
add_subdirectory(audio_coding)
add_subdirectory(video_coding)
add_subdirectory(congestion_controller)
add_subdirectory(rtp_rtcp)
add_subdirectory(utility)
add_subdirectory(pacing)
add_subdirectory(video_processing)
add_subdirectory(remote_bitrate_estimator)
add_subdirectory(bitrate_controller)
add_subdirectory(audio_processing)